# minidex

./: .gitignore  Cargo.toml  LICENSE  README.md  README.org  default.nix  flake.nix
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: common.rs  compactor.rs  lib.rs  matcher.rs  segmented_index.rs
examples/fs-index/: Cargo.toml
examples/fs-index/src/: main.rs
minidex/: Cargo.toml
minidex/benches/: compression_bench.rs  minidex_bench.rs
minidex/src/: collector.rs  common.rs  concurrency_tests.rs  entry.rs  leb128.rs  lib.rs  matcher.rs  memtable.rs  opstamp.rs  search.rs  segmented_index.rs  simd.rs  sync.rs  tokenizer.rs  wal.rs
minidex/src/search/: scoring.rs
minidex/src/segmented_index/: compactor.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
