[package]
name = "minidex-cli"
description = "TUI for minidex"
version = "0.10.0+0.26.1"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
minidex = { path = "../minidex", version = "0" }
ratatui = "0.30.0"
crossterm = { version = "0.28.1" }
anyhow = "1.0.96"
ignore = "0.4.25"
chrono = "0.4.44"