[package]
name = "minidex-core"
version = "0.1.0"
edition = "2024"

[dependencies]
fst = "0.4.7"
lockfile = "0.4.0"
memmap2 = "0.9.9"
regex-automata = { version = "0.4.13", default-features = false, features = ["unicode", "perf", "dfa-build", "dfa-search", "syntax"] }
regex-syntax = "0.8.8"
thiserror = "2.0.17"
